[package]
name = "torch-cmd"
version = "0.1.0"
edition = "2021"
authors = ["Toshimaru <me@toshimaru.net>"]
license = "MIT"
description = "mkdir + touch command"
readme = "README.md"
homepage = "https://github.com/toshimaru/torch"
repository = "https://github.com/toshimaru/torch"
keywords = ["cli", "mkdir", "touch"]
categories = ["command-line-utilities"]

[[bin]]
name = "torch"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filetime = "0.2.23"
clap = { version = "4.4.17", features = ["derive"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.7.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "toshimaru/homebrew-torch"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
